Fixed questions flickering on page load. Randomized result location to prevent full overlap. Added event to move result image forward on hover. Added app id meta tag. Fixed list of friends images bug.

--- a/app/assets/stylesheets/poll.css.sass
+++ b/app/assets/stylesheets/poll.css.sass
@@ -41,7 +41,10 @@
 
 .facebook-friends
   margin-bottom: 50px
+  overflow: hidden
   .facebook-friend
+    float: left
+    background-repeat: no-repeat
     position: relative
     width: 20%
     height: 0
